# app/Models/Property.php
@@ -22,6 +22,11 @@ use Illuminate\Database\Eloquent\SoftDeletes;
  *          description="title",
  *          type="string"
  *      ),
+ *       @SWG\Property(
+ *          property="property_type",
+ *          description="property_type",
+ *          type="string"
+ *      ),
  *      @SWG\Property(
  *          property="address",
  *          description="address",
@@ -192,6 +197,11 @@ class Property extends Model
         'car_entrance',
         'the_purpose',
         'wells',
+        'rental_type',
+        'courtyard',
+        'cellar',
+        'extension',
+        'property_type',
         'property_categorie_id',
         'user_id'
     ];
@@ -224,13 +234,18 @@ class Property extends Model
         'the_number_stores' => 'integer',
         'the_number_apartments' => 'integer',
         'wells' => 'integer',
-        'street_area'=> 'string',
-        'car_entrance'=> 'boolean',
-        'the_purpose'=> 'string',
+        'rental_type' => 'string',
+        'property_type' => 'string',
+        'street_area' => 'string',
+        'car_entrance' => 'boolean',
+        'the_purpose' => 'string',
         'deluxe' => 'boolean',
         'kitchen' => 'boolean',
+        'courtyard' => 'boolean',
+        'cellar' => 'boolean',
         'swimming_pool' => 'boolean',
         'driver_room' => 'boolean',
+        'extension' => 'boolean',
         'maids_room' => 'boolean',
         'elevator' => 'boolean',
         'property_categorie_id' => 'integer',
@@ -248,8 +263,8 @@ class Property extends Model
         'lat' => 'nullable|numeric',
         'lng' => 'nullable|numeric',
         'status' => 'integer',
+        'property_type' => 'required|string',
         'room_number' => 'nullable|integer',
-        'property_age' => 'required|integer',
         'furnished' => 'nullable|integer',
         'air_conditioner' => 'nullable|integer',
         'space' => 'required|integer',
